--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -997,3 +997,14 @@ footer p {
     max-width: 100%;
   }
 }
+/* ===== Force animate.css to run on mobile ===== */
+@media (max-width: 992px){
+  .animated{
+    -webkit-animation-duration: 1s !important;
+            animation-duration: 1s !important;
+    -webkit-animation-fill-mode: both !important;
+            animation-fill-mode: both !important;
+    -webkit-animation-play-state: running !important;
+            animation-play-state: running !important;
+  }
+}
